<resources>
    <string name="app_name">Video Platform</string>
    <string name="login_id">Email ID</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="not_have_a_account_yet">Not have a account yet?</string>
    <string name="click_here">CLICK HERE</string>
    <string name="sign_up">Sign Up</string>
    <string name="email_id">Email Id</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_a_account">Already have a account</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="username">UserName</string>
    <string name="log_out">Log Out</string>
    <string name="profile">Profile</string>
    <string name="change_password">Change Password</string>
    <string name="save_password">Save Password</string>
    <string name="current_password">Current Password</string>
    <string name="username_not_available">UserName not available</string>
    <string name="username_available">UserName Available</string>
    <string name="enter_your_registered_email">Enter your registered email</string>
    <string name="marketing">Marketing</string>
    <string name="machine_learning">Machine Learning</string>
    <string name="web_development">Web Development</string>
    <string name="android_development">Android Development</string>
    <string name="title_activity_dash_board">Video Platform</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="log_in">LOG IN</string>
    <string name="upload_profile_picture">Change Profile Picture</string>
    <string name="upload_profile_pic1">Upload Profile pic</string>
    <string name="profile_pic_upload_description">Profile Pic Upload</string>
    <string name="select_photo">Select Photo</string>
    <string name="upload">Upload</string>
    <string name="selectImage">Select Image</string>
    <string name="student_account">Student Account</string>
    <string name="instructor_account">Instructor Account</string>
    <string name="profile_settings">Profile Settings</string>
    <string name="find_courses">Find Courses</string>
    <string name="add_new_course">Add New Course</string>
    <string name="button">Button</string>
    <string name="cancel">Cancel</string>
    <string name="set_icon">Set Icon</string>
    <string name="add_video">Add Video</string>
    <string name="next">Next</string>
    <string name="add_description">Add Description</string>
    <string name="finish">Finish</string>
    <string name="check_course_name">Check Course Name</string>
    <string name="uploading_course_icon">Uploading Course Icon</string>
    <string name="uploading_course_videos">Uploading Course Videos</string>
    <string name="Updating_course_database">Updating Course Database</string>
    <string name="upload_videos">Upload Videos</string>
    <string name="add_course_details">Add Course Details</string>
    <string name="select_icon">Select Icon</string>
    <string name="upload_course_icon">Upload Course Icon</string>
    <string name="video">Video</string>
    <string name="description">Description:</string>
    <string name="author">Author: </string>
    <string name="course_name">Course Name</string>
    <string name="check">Check</string>
    <string name="upload_course">Upload Course</string>
    <string name="select_videos">Select Videos</string>
    <string name="pick_icon">Pick Icon</string>
    <string name="save_course">Save Course</string>
    <string name="reset">Reset</string>
    <string name="desc">Description</string>
    <string name="course_content">Course Content</string>
    <string name="subscribe">Subscribe</string>
    <string name="my_courses">My Courses</string>
    <string name="search">Search</string>
</resources>
