<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.SignUp">

    <EditText
        android:id="@+id/emailId"
        android:layout_width="334dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/email_id"
        android:inputType="textEmailAddress"
        android:textColor="#000000"
        android:textColorHint="#000000"
        app:layout_constraintBottom_toTopOf="@+id/newPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="AutoFill" />

    <EditText
        android:id="@+id/newPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/new_password"
        android:inputType="textPassword"
        android:textColor="#000000"
        android:textColorHint="#000000"
        app:layout_constraintBottom_toTopOf="@+id/confirmPassword"
        app:layout_constraintEnd_toEndOf="@+id/emailId"
        app:layout_constraintStart_toStartOf="@+id/emailId"
        app:layout_constraintTop_toBottomOf="@+id/emailId"
        tools:ignore="AutoFill" />

    <Button
        android:id="@+id/SignUp"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="334dp"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="@+id/confirmPassword"
        app:layout_constraintStart_toStartOf="@+id/confirmPassword"
        app:layout_constraintTop_toBottomOf="@+id/confirmPassword" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="22dp"
        android:text="@string/already_have_a_account"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/Login"
        app:layout_constraintEnd_toEndOf="@+id/SignUp"
        app:layout_constraintStart_toStartOf="@+id/SignUp"
        app:layout_constraintTop_toBottomOf="@+id/SignUp" />

    <TextView
        android:id="@+id/Login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/click_here"
        android:textColor="#0000FF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/confirmPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:textColorHint="#000000"
        app:layout_constraintBottom_toTopOf="@+id/SignUp"
        app:layout_constraintEnd_toEndOf="@+id/newPassword"
        app:layout_constraintStart_toStartOf="@+id/newPassword"
        app:layout_constraintTop_toBottomOf="@+id/newPassword"
        tools:ignore="AutoFill" />
</android.support.constraint.ConstraintLayout>